--- a/pages/intro.html
+++ b/pages/intro.html
@@ -14,14 +14,14 @@
 
     <dl class="info">
         <dt>Naam</dt>
-        <dd>[STUDENT_NAAM]</dd>
+        <dd>Peter Verschraeghen</dd>
         <dt>Studentnummer</dt>
-        <dd>[STUDENT_NR]</dd>
+        <dd>98950</dd>
         <dt>Klasgroep</dt>
-        <dd>[KLASGROEP]</dd>
+        <dd>1CMO Bb</dd>
     </dl>
     <p>
-        <a href="https://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a><br>
+        <a href="https://deweirdt.be/nmd1/thanks.php?student_id=98950">Mijn opdracht</a><br>
         <a href="#">Online Adobe Xd prototype</a>
     </p>
     
