Deel introductie toegevoegd

--- a/pages/intro.html
+++ b/pages/intro.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>New Media Design I</h1>
-    <h2>[PROJECT_NAME]</h2>
+    <h2>"LittleFishes.be"</h2>
 
     <dl class="info">
         <dt>Naam</dt>
@@ -26,6 +26,10 @@
     </p>
     
     <h1>Introductie</h1>
-    <p>[About my project]</p>
+    <p>
+        Mijn website is een webshop voor aquariums, voor kinderen tussen de 6 tot 12 jaar. Omdat mijn doelgroep jonge kinderen zijn moet de site zeer gebruiksvriendelijk zijn. Alles moet 100% Nederlands zijn, omdat jonge kinderen vaak nog geen andere taal begrijpen.<br>
+        De site is dus een webshop, en moet daarom zeker bepaalde vaste zaken bevatten. Namelijk een winkelmandje, een betaal-pagina, een overzicht van alle producten (gesorteerd op categorie, zoals aquariums, schoonmaakproducten, etc.), ... De site moet natuurlijk ook een goede homepage hebben.<br>
+        Omdat de site op kinderen gericht is, is het belangrijk om hun aandacht en interesse te trekken, en ook vast te houden. Veel mooie, grote beelden zijn dus belangrijk. Ook redelijk felle en speelse kleuren zullen veel gebruikt moeten worden.
+    </p>
 </body>
 </html>
