--- a/pages/intro.html
+++ b/pages/intro.html
@@ -30,6 +30,9 @@
         Mijn website is een webshop voor aquariums, voor kinderen tussen de 6 tot 12 jaar. Omdat mijn doelgroep jonge kinderen zijn moet de site zeer gebruiksvriendelijk zijn. Alles moet 100% Nederlands zijn, omdat jonge kinderen vaak nog geen andere taal begrijpen.<br>
         De site is dus een webshop, en moet daarom zeker bepaalde vaste zaken bevatten. Namelijk een winkelmandje, een betaal-pagina, een overzicht van alle producten (gesorteerd op categorie, zoals aquariums, schoonmaakproducten, etc.), ... De site moet natuurlijk ook een goede homepage hebben.<br>
         Omdat de site op kinderen gericht is, is het belangrijk om hun aandacht en interesse te trekken, en ook vast te houden. Veel mooie, grote beelden zijn dus belangrijk. Ook redelijk felle en speelse kleuren zullen veel gebruikt moeten worden.
+        Extra beveiliging bij het toevoegen aan het winkelmandje en de klant het winkelmandje laten herbekijken is belangrijk zodat de klant niet per ongeluk dingen koopt die een kind heeft toegevoegd zonder toestemming.<br>
+        Omdat een aquarium toch wel wat onderhoud vraagt, ga ik een optie om accounts aan te maken toevoegen. Via jouw account kan je via een automatische mail je laten verwittigen dat je bepaalde producten binnenkort opnieuw nodig hebt. Bijvoorbeeld als je een filter koopt die maak 6 weken werkt, dan krijg je na 5 weken een mail die je verwittigd dat je een nieuwe filter moet kopen. Ook ander aanbiedingen kunnen zo getoond worden.<br>
+        In tegenstelling tot andere sites waar aquariums verkocht worden zal deze site meer basismodellen verkopen. Grote glazen aquariums en aquariums op maat zijn dus niet te koop. Ook vissen zijn niet te koop, maar mogelijk voeg ik een pagina toe met zogezegde partners. Die pagina bevat dan links en adressen van andere webshops en winkels die wel vissen verkopen.
     </p>
 </body>
 </html>
