--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -20,8 +20,10 @@
   </tr>
     
   <tr>
-    <td>Site 1</td>
-    <td>+</td>
+    <td>
+        <a href="https://www.aquabilzen.be/">Aqua Bilzen</a>
+    </td>
+    <td>Hun sterke punten staan direct op de homepagina, zoals gratis verzending, snelle levering.</td>
     <td>-</td>
   </tr>
     
