--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -33,7 +33,7 @@
             Ouderwets logo (stijl begin jaren 2000)<br>
             Te veel zaken staan in de navigatie, sommige dingen konden somengezet worden onder "info".<br>
             Catalogus sorteren kan enkel op merk, niet op afmetingen/grootte.<br>
-            Winkelmandje is niet altijd duidelijk. Tooltips toevoegen zou beter zijn.<br>
+            Winkelmandje is niet altijd duidelijk. Tooltips toevoegen zou beter zijn. (Voor iconen)<br>
             
         </td>
     </tr>
