Added negative aquastore + link adjust

--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -47,7 +47,10 @@
             De pagina van het winkelmandje is zeer duidelijk en mooi opgemaakt. Ook de verzendingskosten staan direct opgelijst, samen met de mogelijkheid om een kortingscode te gebruiken.<br>
             
         </td>
-        <td>-</td>
+        <td>
+            Banner op homepage is oudbollig.<br>
+            Sommige pagina's (leveringskosten) hebben weinig of geen tekstopmaak.
+        </td>
     </tr>
     
     <tr>
