--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -54,7 +54,7 @@
     </tr>
     
     <tr>
-        <td>Site 3</td>
+        <td><a href="http://www.aquavalley.be/">Aquavalley</a></td>
         <td>+</td>
         <td>-</td>
     </tr>
