--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -10,5 +10,23 @@
 </head>
 <body>
     <h1>Scenario's</h1>
+    <h3>Sander, 6 jaar</h3>
+    <p>
+        Sander is 6 jaar oud en mag van zijn mama een goudvis kopen. Sander wil net zo als in de films een ronde bokaal die hij op zijn kamer kan zetten. Zijn mama wil ook een starterset met eten en schoonmaakproducten.
+    </p>
+    
+    <h3>Sander, 6 jaar</h3>
+    <p>
+        Sander is 6 jaar oud en mag van zijn mama een goudvis kopen. Sander wil net zo als in de films een ronde bokaal die hij op zijn kamer kan zetten. Zijn mama wil ook een starterset met eten en schoonmaakproducten.
+    </p>
+    
+    <h3>Sander, 6 jaar</h3>
+    <p>
+        Sander is 6 jaar oud en mag van zijn mama een goudvis kopen. Sander wil net zo als in de films een ronde bokaal die hij op zijn kamer kan zetten. Zijn mama wil ook een starterset met eten en schoonmaakproducten.
+    </p>
+    <h3>Sander, 6 jaar</h3>
+    <p>
+        Sander is 6 jaar oud en mag van zijn mama een goudvis kopen. Sander wil net zo als in de films een ronde bokaal die hij op zijn kamer kan zetten. Zijn mama wil ook een starterset met eten en schoonmaakproducten.
+    </p>
 </body>
 </html>
