--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -15,9 +15,9 @@
         Sander is 6 jaar oud en mag van zijn mama een goudvis kopen. Sander wil net zo als in de films een ronde bokaal die hij op zijn kamer kan zetten. Zijn mama wil ook een starterset met eten en schoonmaakproducten.
     </p>
     
-    <h3>Sander, 6 jaar</h3>
+    <h3>Ella, 12 jaar</h3>
     <p>
-        Sander is 6 jaar oud en mag van zijn mama een goudvis kopen. Sander wil net zo als in de films een ronde bokaal die hij op zijn kamer kan zetten. Zijn mama wil ook een starterset met eten en schoonmaakproducten.
+        Ella heeft al voor een paar vissen gezorgd toen ze nog jonger was. Ze heeft al wat guppies, maar ze wil een groter aquarium
     </p>
     
     <h3>Sander, 6 jaar</h3>
