--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -17,14 +17,14 @@
     
     <h3>Ella, 12 jaar</h3>
     <p>
-        Ella heeft al voor een paar vissen gezorgd toen ze nog jonger was. Ze heeft al wat guppies, maar ze wil een groter aquarium
+        Ella heeft al voor een paar vissen gezorgd toen ze nog jonger was. Ze heeft al wat guppies, maar ze wil een groter aquarium aangezien ze te snel groeien. Ze heeft dit groter aquarium zo snel mogelijk nodig.
     </p>
     
-    <h3>Sander, 6 jaar</h3>
+    <h3>Timmy, 10 jaar</h3>
     <p>
-        Sander is 6 jaar oud en mag van zijn mama een goudvis kopen. Sander wil net zo als in de films een ronde bokaal die hij op zijn kamer kan zetten. Zijn mama wil ook een starterset met eten en schoonmaakproducten.
+        Timmy heeft drie goudvissen in een redelijk groot aquarium. Zijn aquarium heeft problemen met algen, en hij zoekt hiervoor een oplossing nodig.
     </p>
-    <h3>Sander, 6 jaar</h3>
+    <h3>Natacha, 8 jaar</h3>
     <p>
         Sander is 6 jaar oud en mag van zijn mama een goudvis kopen. Sander wil net zo als in de films een ronde bokaal die hij op zijn kamer kan zetten. Zijn mama wil ook een starterset met eten en schoonmaakproducten.
     </p>
