--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -26,7 +26,7 @@
     </p>
     <h3>Natacha, 8 jaar</h3>
     <p>
-        Sander is 6 jaar oud en mag van zijn mama een goudvis kopen. Sander wil net zo als in de films een ronde bokaal die hij op zijn kamer kan zetten. Zijn mama wil ook een starterset met eten en schoonmaakproducten.
+        Natacha wil graag een prinsessen aquarium voor haar witte goudvis. Ze wil iets met veel roze, bovendien heeft haar vader gezien dat haar huidige filter kapot is, dus ze heeft een nieuwe nodig.
     </p>
 </body>
 </html>
